added teleporters to levels

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ FixedCameraDistance=1500.0
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="D:/UE Projects/rogadardpackage")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -77,4 +77,6 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Rogacard/Maps/ClientMap")
 +MapsToCook=(FilePath="/Game/Rogacard/Maps/ServerMap")
++MapsToCook=(FilePath="/Game/Rogacard/Maps/Room1")
++MapsToCook=(FilePath="/Game/Rogacard/Maps/Room2")
 
