--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Rogacard/Maps/ClientMap.ClientMap
 EditorStartupMap=/Game/Rogacard/Maps/ClientMap.ClientMap
-GlobalDefaultGameMode="/Script/Rogadard.RogadardGameMode"
+GlobalDefaultGameMode=/Game/TopDownCPP/Blueprints/AsymRogadardGameMode.AsymRogadardGameMode_C
 GlobalDefaultServerGameMode=/Script/Rogadard.RogadardGameMode
 ServerDefaultMap=/Game/Rogacard/Maps/ServerMap.ServerMap
 
