--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameDefaultMap=/Game/Rogacard/Maps/ClientMap.ClientMap
 EditorStartupMap=/Game/Rogacard/Maps/ClientMap.ClientMap
 GlobalDefaultGameMode=/Game/TopDownCPP/Blueprints/AsymRogadardGameMode.AsymRogadardGameMode_C
 GlobalDefaultServerGameMode=/Script/Rogadard.RogadardGameMode
-ServerDefaultMap=/Game/Rogacard/Maps/ServerMap.ServerMap
+ServerDefaultMap=/Game/Rogacard/Maps/GameLevels.GameLevels
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
